--- a/build.yaml
+++ b/build.yaml
@@ -7,10 +7,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: enki42_left
+    shield: nmortho48_left
   - board: nice_nano_v2
-    shield: enki42_right
+    shield: nmortho48_right
   - board: nice_nano_v2
-    shield: enki42_dongle
+    shield: nmortho48_dongle
   - board: nice_nano_v2
     shield: settings_reset
