--- a/config/boards/shields/enki42/enki42.zmk.yml
+++ b/config/boards/shields/enki42/enki42.zmk.yml
@@ -1,13 +1,13 @@
 file_format: "1"
-id: nmrotho48
-name: The nmrotho48 
+id: enki42
+name: The enki42 
 type: shield
-url: https://github.com/benvallack/zmk-config-nmrotho48
+url: https://github.com/benvallack/zmk-config-enki42
 requires: [pro_micro]
 exposes: [i2c_oled]
 features:
   - keys
 siblings:
-  - nmrotho48_left
-  - nmrotho48_right
-  - nmrotho48_dongle
+  - enki42_left
+  - enki42_right
+  - enki42_dongle
