--- a/build.yaml
+++ b/build.yaml
@@ -7,10 +7,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: enki42_left
+    shield: enki42_left led_indicator
   - board: nice_nano_v2
-    shield: enki42_right
+    shield: enki42_right led_indicator
   - board: nice_nano_v2
-    shield: enki42_dongle
+    shield: enki42_dongle dongle_display
   - board: nice_nano_v2
     shield: settings_reset
