--- a/build.yaml
+++ b/build.yaml
@@ -7,10 +7,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: enki42_left led_indicator
+    shield: enki42_left
   - board: nice_nano_v2
-    shield: enki42_right led_indicator
+    shield: enki42_right
   - board: nice_nano_v2
-    shield: enki42_dongle dongle_display
+    shield: enki42_dongle
   - board: nice_nano_v2
     shield: settings_reset
