--- a/config/west.yml
+++ b/config/west.yml
@@ -2,16 +2,17 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: caksoylar
-      url-base: https://github.com/caksoylar
-
+    - name: mctechnology17
+      url-base: https://github.com/mctechnology17
+      
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: zmk-rgbled-widget
-      remote: caksoylar
-      revision: main
+    - name: zmk-dongle-display-view
+      remote: mctechnology17
+      revision: main      
+
   self:
     path: config
