--- a/build.yaml
+++ b/build.yaml
@@ -8,9 +8,18 @@
 include:
   - board: nice_nano_v2
     shield: enki42_left
+
   - board: nice_nano_v2
     shield: enki42_right
+
   - board: nice_nano_v2
-    shield: enki42_dongle
+    shield: enki42_dongle dongle_display
+
   - board: nice_nano_v2
     shield: settings_reset
+
+  - board: nice_nano_v2
+    shield: sweep_left led_indicator
+    snippet: common-config zmk-usb-logging studio-rpc-usb-uart
+    cmake-args: -DCONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+    artifact-name: sweep_central_left_with_logging
