--- a/build.yaml
+++ b/build.yaml
@@ -8,12 +8,9 @@
 include:
   - board: nice_nano_v2
     shield: enki42_left
-
   - board: nice_nano_v2
     shield: enki42_right
-
-  - board: seeeduino_xiao_ble
-    shield: enki42_dongle dongle_display
-
+  - board: nice_nano_v2
+    shield: enki42_dongle
   - board: nice_nano_v2
     shield: settings_reset
