--- a/config/west.yml
+++ b/config/west.yml
@@ -2,17 +2,17 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: englmaxi
-      url-base: https://github.com/englmaxi
+    - name: mctechnology17
+      url-base: https://github.com/mctechnology17
       
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: zmk-dongle-display
-      remote: englmaxi
-      revision: main
+    - name: zmk-dongle-display-view
+      remote: mctechnology17
+      revision: main      
 
   self:
     path: config
